# session-scribe-whisper-api

./: LICENSE  README.md  pseudocode.md  pyproject.toml  refactoring.md
api/: api.py  gcloud.py  main.py  pdf.py  supabase.py
tests/: test_api.py  test_gcloud.py  test_pdf.py  test_supabase.py
whisper_api/: api.py  audio.py  config.py  constants.py  gcloud.py  logger.py  main.py  pdf.py  supabase.py  transcribe.py  video.py
